yet another refactor, ports
